--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "cy:open": "npx cypress open --browser electron",
-    "cy:run": "cypress run --headeless --browser electron",
+    "cy:run": "cypress run --headless --browser electron",
     "start": "npm install && npm run cy:run",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
