--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "cy:open": "npx cypress open --browser electron",
-    "cy:run": "cypress run --headless --browser electron",
-    "start": "npm install && npm run cy:run",
+    "cy:open": "npx cypress open --browser electron -s form.cy.js",
+    "cy:run": "cypress run --headless -b electron -s */**/intercept.cy.js",
+    "start": "",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -17,7 +17,6 @@
     "cypress": "^12.8.0",
     "cypress-downloadfile": "^1.2.3",
     "cypress-file-upload": "^5.0.8",
-    "cypress-iframe": "^1.0.1",
-    "cypress-xpath": "^2.0.1"
+    "cypress-iframe": "^1.0.1"
   }
 }
